git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/trunk/ACE@80700 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ace/Makefile.am
+++ b/ace/Makefile.am
@@ -157,6 +157,7 @@ libACE_la_SOURCES = \
   Mem_Map.cpp \
   Message_Block.cpp \
   Message_Queue.cpp \
+  Message_Queue_NT.cpp \
   Message_Queue_Vx.cpp \
   Method_Request.cpp \
   Msg_WFMO_Reactor.cpp \
